# scoundrel

./: .gitignore  high_scores.json  main.py  pyproject.toml  requirements.txt  scoundrel.py  test_masks.py
pygame_ui/: main.py  requirements.txt
scoundrel/: pyproject.toml  scoundrel.py
scoundrel.egg-info/: PKG-INFO  SOURCES.txt
scoundrel/scoundrel.egg-info/: SOURCES.txt
scoundrel_ai/: README.md  __init__.py  helpers.py  old_rewards.py  pyproject.toml  replay.py  requiremnets.txt  scoundrel_env.py  test_deck_analyzer.py  train_all_levels.ps1  train_all_levels.sh  train_dqn.py  train_random.py  wrappers.py
scoundrel_ai/deck_analysis/: DECK_ANALYSIS_README.md  __init__.py  deck_analysis_examples.py  deck_analyzer.py  partial_observability.py  test_deck_analyzer.py  test_dfs_solver.py  verify_deck_generation.py
scoundrel_ai/logs/: evaluations.npz  monitor.csv
scoundrel_ai/models/scoundrel_dqn/: gameplay.json  model_name.txt  vec_normalize.pkl
scoundrel_ai/models/scoundrel_ppo/: model_name.txt  vec_normalize.pkl
scoundrel_ai/scoundrel_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scoundrel_ai/tensorboard_logs/DQN_1/: events.out.tfevents.1768936858.Doug.19200.0
scoundrel_ai/tensorboard_logs/DQN_2/: events.out.tfevents.1768937735.Doug.18100.0
scoundrel_ai/tensorboard_logs/DQN_3/: events.out.tfevents.1768937760.Doug.21308.0
scoundrel_ai/tensorboard_logs/DQN_4/: events.out.tfevents.1768938083.Doug.31028.0
scoundrel_ai/tensorboard_logs/DQN_5/: events.out.tfevents.1768938453.Doug.32428.0
tests/: requirements.txt  scoundrel_test.py
(+1 files in other folders)
