# pyproject.toml
[project]
name = "scoundrel"
version = "0.0.1"
description = "Scoundrel Game Logic"
authors = [
    { name = "Aaron Goldstein", email = "your.email@example.com" }
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where = ["."], include = ["scoundrel*"]}