[project]
name = "scoundrel-ai"
version = "0.1.0"
description = "Scoundrel AI Training and Deck Analysis Tools"
authors = [
    { name = "Aaron Goldstein", email = "your.email@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=0.26.0",
    "stable-baselines3>=2.0.0",
    "numpy>=1.21.0",
    "torch>=1.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where = ["."], include = ["scoundrel_ai"]}
